# ml-s25

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: db_attempts.csv  db_tasks.csv
data/ast/: best_model.pth  best_model_old.pth  node_types.txt  node_types_old.txt  test_results.csv  test_results_old.csv
report/: main.tex  references.bib
src/bot/: main.py
src/notebooks/: Approach_to_detect.ipynb  ast.csv  ast.ipynb  ast_explore.ipynb  ast_nn.ipynb  ast_old.ipynb  ast_rf.ipynb  ast_visualize.ipynb  build_dataset.ipynb  build_dataset_old.ipynb  codebert_train_with_splits.ipynb  deberrta_small_train_with_splits.ipynb  deberrta_train.ipynb  deberrta_train_with_splits.ipynb  generate.ipynb  generate2.ipynb  rf.ipynb
src/notebooks/har_and_cookies/: .nodriver_is_open  auth_Gemini.json  auth_LambdaChat.json  auth_OpenaiChat.json
src/notebooks/trees_path/: random_forest_regressor_model.pkl
src/scripts/: ai_dataset.py  ai_loader.py  ai_model.py  ai_optimizer.py  bot.py  metric_utils.py  train_utils.py
