[project]
name = "ml-s25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "g4f[all]>=0.5.0.1",
    "gensim>=4.3.3",
    "googletrans>=4.0.2",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
fix=true
unsafe-fixes=true
line-length=90
