[project]
name = "ml-s25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aiolimiter>=1.2.1",
    "asyncio>=3.4.3",
    "bitsandbytes>=0.45.4",
    "datasets>=3.5.0",
    "g4f[all]>=0.5.0.1",
    "gensim>=4.3.3",
    "googletrans>=4.0.2",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "matplotlib>=3.10.1",
    "dtreeviz>=2.2.2",
    "protobuf>=6.30.2",
    "aiogram>=3.20.0.post0",
    "dotenv>=0.9.9",
    "lime>=0.2.0.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true


[tool.ruff]
extend-include = ["*.ipynb"]
fix=true
unsafe-fixes=true
line-length=90

[tool.ruff.lint]
extend-select = ["I"]
